Fixed img sizing on mobile

--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -128,6 +128,46 @@
     .project-section-img {
         width: 100%;
     }
+
+    .angular-chat-img {
+        max-width: 350px;
+        height: 150px;
+    }
+    
+    .dotnet-web-api-img {
+        width: 300px;
+        height: 150px;
+    }
+    
+    .pictures-videos-microservice-img {
+        width: 250px;
+        height: 250px;
+    }
+    
+    .microservice-management-img {
+        width: 300px;
+        height: 75px;
+    }
+    
+    .point-of-interest-map-img {
+        width: 250px;
+        height: 250px;
+    }
+    
+    .image-classification-img {
+        width: 300px;
+        height: 250px;
+    }
+    
+    .website-design-development-img {
+        width: 250px;
+        height: 150px;
+    }
+    
+    .ecommerce-img {
+        width: 300px;
+        height: 75px;
+    }
 }
 
 @media screen and (min-width: 1400px) {
